--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 body {
+  margin: 0;
   font-family: 'Inter', sans-serif;
 }
